[package]
authors = ["Jason Housley <HousleyJK@gmail.com>"]
description = "Tetsy Lightweight, event-driven WebSockets for Rust."
documentation = "https://docs.rs/tetsy-ws"
keywords = [
    "websocket",
    "mio",
    "event-driven",
    "io",
    "web",
]
license = "MIT"
name = "tetsy-ws"
readme = "README.md"
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-ws"
version = "0.10.0"

[dependencies]
byteorder = "1.2.1"
bytes = "0.4.6"
httparse = "1.2.4"
log = "0.4.1"
mio = "0.6.14"
mio-extras = "2.0"
rand = "0.7"
sha-1 = "0.8.0"
slab = "0.4"
url = "2.0.0"

[dependencies.libc]
optional = true
version = "0.2.40"

[dependencies.libz-sys]
optional = true
version = "1.0.18"

[dependencies.openssl]
optional = true
version = "0.10"

[dependencies.native-tls]
optional = true
version = "0.2"

[dev-dependencies]
clap = "2.31.2"
env_logger = "0.6"
term = "0.5.1"
time = "0.1.39"

[features]
default = []
permessage-deflate = [
    "libz-sys",
    "libc",
]
ssl = ["openssl"]
nativetls = ["native-tls"]
